# OpenGLDemo

./: README.md  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: cube.frag  cube.vert  texture.frag  triangle.frag
app/src/main/cpp/: CMakeLists.txt  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Render.cpp  Render.h  Shader.h  Utils.cpp  Utils.h  main.cpp  stb_image.h
app/src/main/java/com/example/opengldemo/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
